more UI changes to forum and comments

--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
@@ -58,6 +58,7 @@
 {% endif %}
 {% endblock %}
 {% block pagemenu %}
+<li><a href="/forum/">{% trans "Back to Forum" %}</a></li>
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
 <li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
 <li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
