--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/category_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/category_list.html
@@ -10,20 +10,19 @@
 
 {% block content %}
 {% for cat in categories %}
-<h2>{{ cat.cat_name }}</h2>
 <div class="content">
           <table>
             <tr>
             <th class="first" style="width:20px;"></th>
-              <th class="first"><strong>{% trans "Forum" %}</strong></th>
+              <th class="first"><strong>{{ cat.cat_name }}</strong></th>
               <th style="width:30px;"><strong>{% trans "Topics" %}</strong></th>
               <th style="width:30px;"><strong>{% trans "Posts" %}</strong></th>
               <th style="width:200px;"><strong>{% trans "Last Post" %}</strong></th>
             </tr>
             {% for forum in cat.forums %}
-            <tr class="{% cycle rowA,rowB %}">
+            <tr class="small">
               <td class="first"><img src="/site_media/layout/forum/normal.png" alt="*" /></td>
-              <td><a href="/forum/forum/{{ forum.id }}/"><b>{{ forum.forum_name }}</b></a><br />{{ forum.forum_description }}</td>
+              <td style="text-align:left;"><a href="/forum/forum/{{ forum.id }}/"><b>{{ forum.forum_name }}</b></a><br />{{ forum.forum_description }}</td>
               <td>{% if forum.is_redirect %}-{% else %}{{ forum.forum_topics }}{% endif %}</td>
               <td>{% if forum.is_redirect %}-{% else %}{{ forum.forum_posts }}{% endif %}</td>
               <td>{% if forum.is_redirect %}-{% else %}{{ forum.forum_lastpost|safe }}{% endif %}</td>
