--- a/trunk/diamandas/pages/templates/pages/body.html
+++ b/trunk/diamandas/pages/templates/pages/body.html
@@ -13,7 +13,7 @@
 	<div id="top">
 		<div id="topmenu">
 			<form id="myform" action="/w/search/" method="post">
-			<input type="text" class="textinput" name="term" /> <input class="submit" type="submit" value="Szukaj" />
+			<input type="text" class="textinput" name="term" /> <input class="submit" type="submit" value="{% trans "Search" %}" />
 			</form>
 		</div>
 		<h1>{% block crumb %}<a href="/">{% trans "Home" %}</a>{% endblock %}</h1>
