--- a/trunk/diamandas/boxcomments/templates/boxcomments/comments.html
+++ b/trunk/diamandas/boxcomments/templates/boxcomments/comments.html
@@ -4,23 +4,24 @@
 
 {% block content %}<div class="box">{% trans "Here you can read all comments for" %} "<i>{{ title }}</i>". {% trans "You can add your comment using the form below. Please do not ask for help - use <b>Forums</b> for help and support." %}</div>
 {% if com %}
-<div class="content">
-<table>
-	<tr>
-		<th width="20%"><strong>{% trans "Author" %}</strong></th>
-		<th class="first"><strong>{% trans "Comment" %}</strong></th>
-	</tr>
 	{% for i in com %}
-		<tr class="{% cycle rowA,rowB %}">
-		<td>
-			<div class="box"><b>{{ i.author }}</b></div>
-			{{ i.date|date:"d.m.Y G:i" }}<br /><a href="/com/{{ appid }}/{{ apptype }}/{{ i.id }}/">{% trans "Quote" %}</a>{% if user.is_staff %} | <a href="/admin/boxcomments/comment/{{ i.id }}/">{% trans "Admin" %}</a>{% endif %}
-		</td>
-		<td class="first" style="text-align:justify;">{{ i.text|fbc|safe }}</td>
-		</tr>
+	<div class="post">
+		    <div class="posthead">{{ i.date|date:"d.m.Y" }}</div>
+		    <div class="leftpost">
+			      <strong>{{ i.author }}</strong>
+		    </div>
+		    <div class="rightpost">	
+			      {{ i.text|fbc|safe|urlizetrunc:"60" }}
+		    </div>
+		    <div class="leftbottompost">
+			      {% if perms.is_staff %}{{ i.ip }}{% endif %}
+		    </div>
+		    <div class="rightbottompost">
+			      {% if not ban %}<a href="/com/{{ appid }}/{{ apptype }}/{{ i.id }}/" class="quote">{% trans "Quote" %}</a>{% endif %}{% if user.is_staff %} <a href="/admin/boxcomments/comment/{{ i.id }}/" class="edit">{% trans "Admin" %}</a>{% endif %}
+		    </div>
+	</div>
+	<br />
 	{% endfor %}
-</table>
-</div>
 {% else %}
 <h4>{% trans "No Comments" %}</h4>
 {% endif %}
@@ -35,7 +36,7 @@
             </tr>
             <tr class="rowB">
               <td><b>{% trans "Text from the image" %}</b></td>
-              <td>{{ form.imgtext }}{% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/captcha/{{ user }}.jpg" alt=""></td>
+              <td>{{ form.imgtext }}{% if form.imgtext.errors %}<br />*** {{ form.imgtext.errors|join:", " }}{% endif %}<br /><img src="/site_media/captcha/{{ user }}.jpg?random={{ hash }}" alt=""></td>
             </tr>
              <tr class="rowA">
               <td></td>
