--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/mytopics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/mytopics_list.html
@@ -2,42 +2,42 @@
 {% load i18n %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a>{% endblock %}
 {% block content %}
-<h2><a href="/forum/">{% trans "Forum Index" %}</a></h2>
 <div class="content">
           <table>
             <tr>
-              <th class="first"></th>
+              <th class="first" style="width:20px;"></th>
               <th><strong>{% trans "Topic" %}</strong></th>
-              <th><strong>{% trans "Author" %}</strong></th>
-              <th><strong>{% trans "Posts" %}</strong></th>
-              <th><strong>{% trans "Last Post" %}</strong></th>
+              <th style="width:90px;"><strong>{% trans "Author" %}</strong></th>
+              <th style="width:15px;"><strong>{% trans "Posts" %}</strong></th>
+              <th style="width:150px;"><strong>{% trans "Last Post" %}</strong></th>
             </tr>
-           {% for topic in topics %}
-            <tr class="{% cycle rowA,rowB %}">
+            {% for topic in topics%}
+            <tr class="small">
            <td class="first">
-{% if topic.is_locked %}
-	<img src="/site_media/layout/forum/lock.png" alt="*" />
-{% else %}
-	{% if topic.is_sticky %}
-		<img src="/site_media/layout/forum/stick.png" alt="*" />
-	{% else %}
-		{% if topic.is_global %}
-			<img src="/site_media/layout/forum/glob.png" alt="*" />
-		{% else %}
-			<img src="/site_media/layout/forum/normal.png" alt="*" />
-		{% endif%}
-	{% endif%}
-{% endif %}</td>
-              <td><a href="/forum/topic/{{ topic.topic_last_pagination_page }}/{{ topic.id }}/">{{ topic.topic_name }}</a></td>
-              <td>{{ topic.topic_author }}</td>
-              <td>{{ topic.topic_posts }}</td>
-              <td>{{ topic.topic_lastpost|safe }}</td>
+            {% if topic.is_locked %}
+                    <img src="/site_media/layout/forum/lock.png" alt="*" />
+            {% else %}
+                    {% if topic.is_sticky %}
+                            <img src="/site_media/layout/forum/stick.png" alt="*" />
+                    {% else %}
+                            {% if topic.is_global %}
+                                    <img src="/site_media/layout/forum/glob.png" alt="*" />
+                            {% else %}
+                                    <img src="/site_media/layout/forum/normal.png" alt="*" />
+                            {% endif%}
+                    {% endif%}
+            {% endif %}</td>
+                          <td style="text-align:left;"><a href="/forum/topic/{{ topic.topic_last_pagination_page }}/{{ topic.id }}/">{{ topic.topic_name }}</a></td>
+                          <td>{{ topic.topic_author }}</td>
+                          <td>{{ topic.topic_posts }}</td>
+                          <td>{{ topic.topic_lastpost|safe }}</td>
             </tr>
 	    {% endfor %}
           </table>
 </div>
 {% endblock %}
 {% block pagemenu %}
+<li><a href="/forum/">{% trans "Back to Forum" %}</a></li>
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
 <li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
 <li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
