--- a/trunk/site_media/layout/style.css
+++ b/trunk/site_media/layout/style.css
@@ -48,6 +48,20 @@ margin-bottom:20px;
 /* border-left:1px solid #3c78b5; */
 }
 
+#crumb
+{
+	background-color:#0C2432;
+	padding:4px;
+	color:white;
+	border-bottom:solid 1px #3c78b5;
+	font-size:11px;
+	
+}
+#crumb a
+{
+	color:white;
+}
+
 #top
 {
 padding:0px;
@@ -63,7 +77,8 @@ color:white;
 #top h1
 {
 margin:5px; margin-bottom:10px; padding:0px;color:white;
-padding-top:14px;
+padding-top:17px;
+margin-left:15px;
 font-size:18px;
 font-weight:bold;
 font-style: italic;
@@ -72,7 +87,7 @@ margin-top:0px;
 #topmenu
 {
 float:right;
-margin:15px;
+margin:17px;
 }
 #topmenu li
 {
@@ -206,7 +221,7 @@ overflow:auto;
 
 .posthead
 {
-	font-size:12px;
+	font-size:11px;
 	font-weight:bold;
 	background-color:#143D55;
 	color:white;
@@ -267,6 +282,25 @@ a.delete
 	background-image:url(delete.png);
 	background-repeat:no-repeat;
 	padding-left:19px;
+}
+
+div.addTopic
+{
+	text-align:right;
+	font-weight:bold;
+	font-size:14px;
+}
+div.addTopic a
+{
+	border: solid 1px #6C6C6C;
+	padding: 4px;
+	background-color:#DDDDDD;
+}
+div.addTopic a:hover
+{
+	border: solid 1px black;
+	padding: 4px;
+	background-color:#CCCCCC;
 }
 
 
@@ -421,7 +455,7 @@ margin:0px;
 
 #modernbricksmenu2 ul{
 margin:0;
-margin-left: 5px; /*margin between first menu item and left browser edge*/
+margin-left: 0px; /*margin between first menu item and left browser edge*/
 padding: 0;
 list-style: none;
 }
