--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/mytopics_list.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/mytopics_list.html
@@ -30,7 +30,7 @@
                           <td style="text-align:left;"><a href="/forum/topic/{{ topic.topic_last_pagination_page }}/{{ topic.id }}/">{{ topic.topic_name }}</a></td>
                           <td>{{ topic.topic_author }}</td>
                           <td>{{ topic.topic_posts }}</td>
-                          <td>{{ topic.topic_lastpost|safe }}</td>
+                          <td>{{ topic.topic_lastposter }}, {{topic.topic_modification_date|date:"d.m.Y" }}</td>
             </tr>
 	    {% endfor %}
           </table>
