--- a/trunk/diamandas/userpanel/templates/userpanel/password_change.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_change.html
@@ -3,15 +3,15 @@
 {% block content %}
 <h2>{% trans "Change Password" %}</h2>
 {% if form.has_errors %}
-<p>{% trans "There was a problem with password change." %}</p>
+<div class="errmsg">{% trans "There was a problem with password change. Did you entered correct email address?" %}</div>
 {% endif %}
 
 <form method="post" action=".">
 <div class="content">
-<table>
-<tr class="rowA"><td>{% trans "Current Password" %}:</td><td>{{ form.old_password }}</td></tr>
-<tr class="rowB"><td>{% trans "New Password" %}:</td><td>{{ form.new_password1 }}</td></tr>
-<tr class="rowA"><td>{% trans "New Password again" %}:</td><td>{{ form.new_password2 }}</td></tr>
+<table style="width:50%;">
+<tr class="rowA"><td class="first"><strong>{% trans "Current Password" %}</strong>:</td><td>{{ form.old_password }}</td></tr>
+<tr class="rowB"><td class="first"><strong>{% trans "New Password" %}</strong>:</td><td>{{ form.new_password1 }}</td></tr>
+<tr class="rowA"><td class="first"><strong>{% trans "New Password again" %}</strong>:</td><td>{{ form.new_password2 }}</td></tr>
 </table>
 </div>
 <br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Change Password" %}"></div><br /></div>
