--- a/trunk/diamandas/pages/templates/pages/show_index.html
+++ b/trunk/diamandas/pages/templates/pages/show_index.html
@@ -23,13 +23,42 @@
 {% block right %}
 <div class="important">
 	{% if itopics %}
-		<h4><a href="/forum/">{% trans "Latest Topics" %}</a></h4>
-		<ul>{% for t in itopics %}<li><a href="/forum/topic/{{ t.topic_last_pagination_page }}/{{ t.id }}/">{{ t.topic_name }}</a> ({{ t.last }})</li>{% endfor %}{% endif %}</ul>
+		  <table style="width:180px;">
+		    <tr>
+		      <th class="first"><a href="/forum/"><strong>{% trans "Latest Topics" %}</strong></a></th>
+		    </tr>
+		    {% for t in itopics %}
+		      <tr class="small">
+		      <td class="first"><a href="/forum/topic/{{ t.topic_last_pagination_page }}/{{ t.id }}/">{{ t.topic_name }}</a> ({{ t.topic_lastposter }})</td>
+		     </tr>
+		    {% endfor %}
+		  </table>
+	<br />{% endif %}
+	
 	{% if com %}
-		<h4>{% trans "Latests Comments" %}</h4>
-		<ul>{% for t in com %}<li><a href="/com/{{ t.appid }}/{{ t.apptype }}/">{{ t.title }}</a></li>{% endfor %}</ul>{% endif %}
+		  <table style="width:180px;">
+		    <tr>
+		      <th class="first"><strong>{% trans "Latests Comments" %}</strong></th>
+		    </tr>
+		    {% for t in com %}
+		      <tr class="small">
+		      <td class="first"><a href="/com/{{ t.appid }}/{{ t.apptype }}/">{{ t.title }}</a></td>
+		     </tr>
+		    {% endfor %}
+		  </table>
+	<br />{% endif %}
+	
 	{% if onsite %}
-		<h4>{% trans "Users online" %}</h4>
-		<ul>{% for t in onsite %}<li>{{ t.username }}</li>{% endfor %}</ul>{% endif %}
+		  <table style="width:180px;">
+		    <tr>
+		      <th class="first"><strong>{% trans "Users online" %}</strong></th>
+		    </tr>
+		    {% for t in onsite %}
+		      <tr class="small">
+		      <td class="first">{{ t.username }}</td>
+		     </tr>
+		    {% endfor %}
+		  </table>
+	{% endif %}
 </div>
 {% endblock %}
