--- a/trunk/diamandas/userpanel/templates/userpanel/password_reset.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_reset.html
@@ -3,13 +3,16 @@
 {% block content %}
 <h2>{% trans "Reset Password" %}</h2>
 {% if form.has_errors %}
-<p>{% trans "There was a problem with password reset." %}</p>
+<div class="errmsg">{% trans "There was a problem with password reset. Did you entered correct email address?" %}</div>
 {% endif %}
 
 <form method="post" action=".">
 <div class="content">
-<table>
-<tr class="rowA"><td><label for="id_username">{% trans "Email used on registration" %}:</label></td><td>{{ form.email }}</td></tr>
+<table style="width:50%;">
+<tr class="rowA">
+    <td class="first"><label for="id_username">{% trans "Email used on registration" %}:</label></td>
+    <td class="first">{{ form.email }}</td>
+</tr>
 </table>
 </div>
 <br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Reset Password" %}"></div><br /></div></form>
