--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_post.html
@@ -3,60 +3,43 @@
 {% load fbc %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/forum/">{% trans "Forum Index" %}</a> > <a href="/forum/forum/{{ forum.id }}/">{{ forum.forum_name }}</a> > <a href="/forum/topic/{{ topic.topic_last_pagination_page }}/{{ topic.id }}/">{{ topic.topic_name }}</a>{% endblock %}
 {% block content %}
-<h2>{% trans "Add Post" %}</h2>
-<form method="post" action=".">
-<div class="content">
-          <table>
-            <tr class="rowB">
-              <td>{% trans "Text" %}</td>
-              <td>
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<b></b>"'>{% trans "Bold" %}</a>,
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<i></i>"'>{% trans "Italic" %}</a>, 
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<u></u>"'>{% trans "Underline" %}</a>, 
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<img src=\"URL\" alt=\"\" />"'>{% trans "Image" %}</a>,
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<blockquote></blockquote>"'>{% trans "Blockquote" %}</a>,
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"[code]{% trans "Code Here" %}[/code]"'>{% trans "Code" %}</a> 
-				<br />
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':omg:' "><img src="/site_media/layout/forum/smilies/icon_eek.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':nice:' "><img src="/site_media/layout/forum/smilies/icon_biggrin.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':evil:' "><img src="/site_media/layout/forum/smilies/icon_evil.gif" alt="" /></a>
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':twisted:' "><img src="/site_media/layout/forum/smilies/icon_twisted.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':grin:' "><img src="/site_media/layout/forum/smilies/icon_cheesygrin.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':cool:' "><img src="/site_media/layout/forum/smilies/icon_cool.gif" alt="" /></a> 
-			<br />
-			<div class="box">{% trans "Place code snippets inside [code][/code] tags !" %}</div>
-			<textarea rows="10" cols="60" name="post_text" id="id_text">{% if post_text %}{{ post_text }}{% else %}{{ quote_text }}{% endif %}</textarea>
-			{% if form.post_text.errors %}{{ form.post_text.errors }}{% endif %}
-              </td>
-            </tr>
-          </table>
-</div>
-
-<div class="box"><br />
-<div style="text-align:center;"><input type="submit" value="{% trans "Add Post" %}" style="actiontable"></div>
+<form method="post" action="/forum/add_post/{{ topic.id }}/">
+<div class="postform">
+        <div class="posthead">{% trans "Add new post" %}</div>
+        <div class="leftpostform">
+		<strong>{% trans "Content" %}</strong>
+	</div>
+	<div class="rightpostform">	
+	      <textarea name="post_text" id="id_text" onkeyup="fit_textarea(this);" rows="6">{% if post_text %}{{ post_text }}{% else %}{{ quote_text }}{% endif %}</textarea>
+	</div>
+        <div class="leftpostform">
+	</div>
+	<div class="rightpostform">	
+                <input type="submit" value="{% trans "Add post" %}" />
+	</div>
+    </div>
 </form>
-<br><b>{% trans "Allowed HTML Tags" %}</b>: b, a, i, br, p, u, img, li, ul, ol, center, sub, sup, cite, blockquote<br /><br /></div><br />
+
 
 <h2>{% trans "Last 10 posts from topic" %}</h2>
 {% if lastpost %}
-<div class="content">
-          <table>
-            <tr>
-              <th class="first"><strong>{% trans "Post" %}</strong></th>
-              <th width="20%"><strong>{% trans "Author" %}</strong></th>
-            </tr>
-	{% for i in lastpost %}
-	<tr class="{% cycle rowA,rowB %}"> 
-	<td class="first" style="text-align:justify;">{{ i.post_text|fbc|safe }} ({{ i.post_date|date:"d.m.Y" }})</td>
-	<td>
-		<div class="box">{{ i.post_author }}</div>
-	</td>
-</tr>
-{% endfor %}
-</table>
-</div>
+
+{% for i in lastpost %}
+	<div class="post">
+		    <div class="posthead">{{ i.post_date|date:"d.m.Y" }}</div>
+		    <div class="leftpost">
+			      <strong>{{ i.post_author}}</strong>
+		    </div>
+		    <div class="rightpost">
+			      {{ i.post_text|fbc|safe|urlizetrunc:"60" }}
+		    </div>
+	</div>
+	<br />
+	{% endfor %}
+
 {% endif %}
 {% endblock %}
+
 {% block pagemenu %}
 <li><a href="/forum/">{% trans "Back to Forum" %}</a></li>
 <li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
