--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/add_topic.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/add_topic.html
@@ -5,51 +5,38 @@
 
 
 
-<h2>{% trans "Add Topic" %}</h2>
 <form method="post" action=".">
-<div class="content">
-          <table>
-            <tr class="rowA">
-              <td class="first">{% trans "Title" %}</td>
-              <td>{{ form.topic_name }}{% if form.topic_name.errors %}<br />*** {{ form.topic_name.errors|join:", " }}{% endif %}</td>
-            </tr>
-            <tr class="rowB">
-              <td>{% trans "Text" %}</td>
-              <td>
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<b></b>"'>{% trans "Bold" %}</a>,
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<i></i>"'>{% trans "Italic" %}</a>, 
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<u></u>"'>{% trans "Underline" %}</a>, 
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<img src=\"URL\" alt=\"\" />"'>{% trans "Image" %}</a>,
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"<blockquote></blockquote>"'>{% trans "Blockquote" %}</a>,
-			<a onclick='document.getElementById("id_text").value=document.getElementById("id_text").value+"[code]{% trans "Code Here" %}[/code]"'>{% trans "Code" %}</a> 
-				<br />
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':omg:' "><img src="/site_media/layout/forum/smilies/icon_eek.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':nice:' "><img src="/site_media/layout/forum/smilies/icon_biggrin.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':evil:' "><img src="/site_media/layout/forum/smilies/icon_evil.gif" alt="" /></a>
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':twisted:' "><img src="/site_media/layout/forum/smilies/icon_twisted.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':grin:' "><img src="/site_media/layout/forum/smilies/icon_cheesygrin.gif" alt="" /></a> 
-				<a onclick="document.getElementById('id_text').value=document.getElementById('id_text').value+ ':cool:' "><img src="/site_media/layout/forum/smilies/icon_cool.gif" alt="" /></a> 
-			<br />
-			<div class="box">{% trans "Place code snippets inside [code][/code] tags !" %}</div>
-			<textarea rows="10" cols="60" name="text" id="id_text">{{ post_text }}</textarea>
-              </td>
-            </tr>
-            {% if perms.is_staff %}<tr class="rowA">
-              <td class="first">{% trans "Sticky" %}</td>
-              <td>{{ form.is_sticky }}{% if form.is_sticky.errors %}<br />*** {{ form.is_sticky.errors|join:", " }}{% endif %}</td>
-            </tr>
-            <tr class="rowB">
-              <td class="first">{% trans "Global" %}</td>
-              <td>{{ form.is_global }}{% if form.is_global.errors %}<br />*** {{ form.is_global.errors|join:", " }}{% endif %}</td>
-            </tr>{% endif %}
-          </table>
-</div>
+<div class="postform">
+        <div class="posthead">{% trans "Add new topic" %}</div>
+        
+        <div class="leftpostform">
+		<strong>{% trans "Title" %}</strong>
+	</div>
+	<div class="rightpostform">	
+	      {{ form.topic_name }}{% if form.topic_name.errors %}<br />*** {{ form.topic_name.errors|join:", " }}{% endif %}
+	</div>
+        <div class="leftpostform">
+		<strong>{% trans "Content" %}</strong>
+	</div>
+	<div class="rightpostform">	
+	      <textarea name="text" id="id_text" onkeyup="fit_textarea(this);" rows="6">{{ post_text }}</textarea>
+	</div>
+        {% if perms.is_staff %}
+            <div class="leftpostform"><strong>{% trans "Options" %}</strong>
+            </div>
+            <div class="rightpostform" id="checkboxes">	
+                   {{ form.is_sticky }} {% trans "Sticky" %}{% if form.is_sticky.errors %}<br />*** {{ form.is_sticky.errors|join:", " }}{% endif %}<br />
+                   {{ form.is_global }} {% trans "Global" %}{% if form.is_global.errors %}<br />*** {{ form.is_global.errors|join:", " }}{% endif %}
+            </div>
+        {% endif %}
+        <div class="leftpostform">
+	</div>
+	<div class="rightpostform">	
+                <input type="submit" value="{% trans "Add topic" %}" />
+	</div>
+    </div>
 
-
-<div class="box"><br />
-<div style="text-align:center;"><input type="submit" value="{% trans "Add Topic" %}" style="actiontable" /></div>
-</form><br />
-<b>{% trans "Allowed HTML Tags" %}</b>: b, a, i, br, p, u, img, li, ul, ol, center, sub, sup, cite, blockquote</div>
+</form>
 {% endblock %}
 {% block pagemenu %}
 <li><a href="/forum/">{% trans "Back to Forum" %}</a></li>
